Bestseller Cupcakes Update

--- a/index.html
+++ b/index.html
@@ -65,5 +65,96 @@
 
       showSlides();
     </script>
+    <h2>Bestsellers</h2>
+    <div class="bestseller-box">
+      <div class="bestseller-cupcake">
+        <div class="inside-cupcake">
+          <div class="inside-image">
+            <img src="img/Caramel-Cupcake.jpeg" />
+            <div class="rating">
+              <span class="rating-text">5.0</span>
+              <span class="star-icon">&#9733;</span>
+            </div>
+          </div>
+          <ul>
+            <li>Classic Caramel Perfection</li>
+            <li>$3.75 / Per Cupcake</li>
+            <li>$21.50 / Half Dozen</li>
+            <li>$41.50 / Dozen</li>
+          </ul>
+          <div class="order-box">
+            <div class="order-now-rectangle">
+              <a href="#" class="order-now">Order Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bestseller-cupcake">
+        <div class="inside-cupcake">
+          <div class="inside-image">
+            <img src="img/Vanilla-Cupcake.webp" />
+            <div class="rating">
+              <span class="rating-text">4.9</span>
+              <span class="star-icon">&#9733;</span>
+            </div>
+          </div>
+          <ul>
+            <li>Classic Vanilla Dream</li>
+            <li>$3.75 / Per Cupcake</li>
+            <li>$21.50 / Half Dozen</li>
+            <li>$41.50 / Dozen</li>
+          </ul>
+          <div class="order-box">
+            <div class="order-now-rectangle">
+              <a href="#" class="order-now">Order Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bestseller-cupcake">
+        <div class="inside-cupcake">
+          <div class="inside-image">
+            <img src="img/Velvet-Cupcake.jpg" />
+            <div class="rating">
+              <span class="rating-text">4.8</span>
+              <span class="star-icon">&#9733;</span>
+            </div>
+          </div>
+          <ul>
+            <li>Red Velvet Elegance</li>
+            <li>$3.75 / Per Cupcake</li>
+            <li>$21.50 / Half Dozen</li>
+            <li>$41.50 / Dozen</li>
+          </ul>
+          <div class="order-box">
+            <div class="order-now-rectangle">
+              <a href="#" class="order-now">Order Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bestseller-cupcake">
+        <div class="inside-cupcake">
+          <div class="inside-image">
+            <img src="img/Oreo-Cupcake.webp" />
+            <div class="rating">
+              <span class="rating-text">4.8</span>
+              <span class="star-icon">&#9733;</span>
+            </div>
+          </div>
+          <ul>
+            <li>Cookies & Cream</li>
+            <li>$3.75 / Per Cupcake</li>
+            <li>$21.50 / Half Dozen</li>
+            <li>$41.50 / Dozen</li>
+          </ul>
+          <div class="order-box">
+            <div class="order-now-rectangle">
+              <a href="#" class="order-now">Order Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
