Why Us Section  and Footer Update

--- a/index.html
+++ b/index.html
@@ -156,5 +156,77 @@
         </div>
       </div>
     </div>
+    <h2>Why Order From Us?</h2>
+    <div class="fromus-box">
+      <div class="fromus-content">
+        <div class="fromus-image">
+          <img src="img/Sugar.jpg" alt="Low Sugar Ingredients" />
+          <div class="image-text">
+            <p>Low Sugar Ingredients</p>
+          </div>
+        </div>
+      </div>
+      <div class="fromus-content">
+        <div class="fromus-image">
+          <img src="img/flour.jpg" alt="High Quality" />
+          <div class="image-text">
+            <p>High Quality</p>
+          </div>
+        </div>
+      </div>
+      <div class="fromus-content">
+        <div class="fromus-image">
+          <img src="img/egg.jpg" alt="Ethically Sourced" />
+          <div class="image-text">
+            <p>Ethically Sourced</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class="footer-box">
+        <div class="footer-list">
+          <h3>Opening Hours</h3>
+          <ul>
+            <li>Monday - Sunday</li>
+            <li>7am - 10pm</li>
+            <li>+65 8909 9154</li>
+            <li>Email: S10258376@connect.np.edu.sg</li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-box">
+        <div class="footer-list">
+          <h3>About</h3>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-box">
+        <div class="footer-list">
+          <h3>Help</h3>
+          <ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms and Conditions</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-box">
+        <div class="footer-list">
+          <h3>Our Socials</h3>
+          <a href="#" class="footer-icons"
+            ><img src="img/instagram-icon.svg" alt="Instagram"
+          /></a>
+          <a href="#" class="footer-icons"
+            ><img src="img/tiktok-icon.svg" alt="TikTok"
+          /></a>
+          <a href="#" class="footer-icons"
+            ><img src="img/acebook-icon.svg" alt="Facebook"
+          /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
