--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             ><img src="img/tiktok-icon.svg" alt="TikTok"
           /></a>
           <a href="#" class="footer-icons"
-            ><img src="img/acebook-icon.svg" alt="Facebook"
+            ><img src="img/facebook-icon.svg" alt="Facebook"
           /></a>
         </div>
       </div>
