creation of custom.html with header update

--- a/custom.html
+++ b/custom.html
@@ -26,5 +26,18 @@
         </div>
       </div>
     </div>
+    <div class="header-cupcake">
+      <div class="header-cupcake-box">
+        <img
+          src="img/custom-header.jpeg"
+          alt="Header Cupcake"
+          class="faded-image"
+        />
+        <div class="header-text">
+          <h1>Design Your Own Cupcake</h1>
+          <h3>IT STARTS HERE!</h3>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
