Update in Custom Page

--- a/custom.html
+++ b/custom.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="custom.css" />
     <title>Assignment 1</title>
   </head>
   <body>
@@ -29,7 +30,7 @@
     <div class="header-cupcake">
       <div class="header-cupcake-box">
         <img
-          src="img/custom-header.jpeg"
+          src="img/custom-header.jpg"
           alt="Header Cupcake"
           class="faded-image"
         />
@@ -39,5 +40,283 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="block">
+        <div class="rectangle">
+          <h3>Size</h3>
+        </div>
+      </div>
+      <div class="button-box">
+        <div class="button-row">
+          <button>One</button>
+          <button>Half-Dozen</button>
+          <button>Dozen</button>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="block">
+        <div class="rectangle">
+          <h3>Frosting Type & Flavour</h3>
+        </div>
+      </div>
+      <div class="button-box">
+        <div class="button-row">
+          <button>Vanilla</button>
+          <button>Chocolate</button>
+          <button>Strawberry</button>
+          <button>Caramel</button>
+          <button>Espresso</button>
+          <button>S'Mores</button>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="block">
+        <div class="rectangle">
+          <h3>Toppers</h3>
+        </div>
+      </div>
+      <div class="button-box">
+        <div class="button-row">
+          <button>2D</button>
+          <button>3D</button>
+          <button>Toy</button>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="block">
+        <div class="rectangle">
+          <h3>Design Description</h3>
+        </div>
+      </div>
+      <div class="description-form">
+        <form id="designDescriptionForm">
+          <textarea
+            id="designDescription"
+            rows="4"
+            placeholder="Type your description (max 200 characters/words)"
+          ></textarea>
+          <p id="counter">Characters/words left: 200</p>
+        </form>
+      </div>
+    </div>
+    <script>
+      // JavaScript to limit characters/words in the description textarea
+      const maxCharacters = 200;
+      const descriptionTextarea = document.getElementById("designDescription");
+      const counter = document.getElementById("counter");
+
+      descriptionTextarea.addEventListener("input", function () {
+        const currentLength = this.value.length;
+        const remainingCharacters = maxCharacters - currentLength;
+
+        counter.textContent =
+          remainingCharacters >= 0
+            ? `Characters/words left: ${remainingCharacters}`
+            : "Exceeded limit!";
+
+        // Trim the content if it exceeds the limit
+        if (remainingCharacters < 0) {
+          this.value = this.value.slice(0, maxCharacters);
+        }
+      });
+    </script>
+
+    <div class="container">
+      <div class="block">
+        <div class="rectangle">
+          <h3>Explanatory File</h3>
+        </div>
+      </div>
+      <div class="file-import">
+        <form id="explanatoryFileForm">
+          <label for="fileInput">Choose File (PNG, JPG, JPEG):</label>
+          <input
+            type="file"
+            id="fileInput"
+            name="fileInput"
+            accept=".png, .jpg, .jpeg"
+          />
+          <button type="button" id="deleteFileButton" onclick="deleteFile()">
+            Delete
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="block">
+        <div class="rectangle">
+          <h3>Add To Cart</h3>
+        </div>
+      </div>
+      <div class="submit-button">
+        <button id="addToCartButton">Add To Cart</button>
+      </div>
+    </div>
+    <script>
+      const fileInput = document.getElementById("fileInput");
+      const deleteFileButton = document.getElementById("deleteFileButton");
+
+      fileInput.addEventListener("change", function () {
+        const allowedExtensions = /(\.png|\.jpg|\.jpeg)$/i;
+        if (!allowedExtensions.exec(this.value)) {
+          alert(
+            "Please choose an image file with a valid extension: .png, .jpg, .jpeg"
+          );
+          this.value = "";
+        }
+      });
+
+      // Function to delete the selected file
+      function deleteFile() {
+        const fileInput = document.getElementById("fileInput");
+        fileInput.value = ""; // Clear the file input
+      }
+
+      const addToCartButton = document.getElementById("addToCartButton");
+      addToCartButton.addEventListener("click", function () {
+        alert("Item added to cart!");
+      });
+    </script>
+    <div class="line"></div>
+    <h2 class="like-heading">You may also like...</h2>
+    <div class="bestseller-box">
+      <div class="bestseller-cupcake">
+        <div class="inside-cupcake">
+          <div class="inside-image">
+            <img src="img/Caramel-Cupcake.jpeg" />
+            <div class="rating">
+              <span class="rating-text">5.0</span>
+              <span class="star-icon">&#9733;</span>
+            </div>
+          </div>
+          <ul>
+            <li>Classic Caramel Perfection</li>
+            <li>$3.75 / Per Cupcake</li>
+            <li>$21.50 / Half Dozen</li>
+            <li>$41.50 / Dozen</li>
+          </ul>
+          <div class="order-box">
+            <div class="order-now-rectangle">
+              <a href="#" class="order-now">Order Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bestseller-cupcake">
+        <div class="inside-cupcake">
+          <div class="inside-image">
+            <img src="img/Vanilla-Cupcake.webp" />
+            <div class="rating">
+              <span class="rating-text">4.9</span>
+              <span class="star-icon">&#9733;</span>
+            </div>
+          </div>
+          <ul>
+            <li>Classic Vanilla Dream</li>
+            <li>$3.75 / Per Cupcake</li>
+            <li>$21.50 / Half Dozen</li>
+            <li>$41.50 / Dozen</li>
+          </ul>
+          <div class="order-box">
+            <div class="order-now-rectangle">
+              <a href="#" class="order-now">Order Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bestseller-cupcake">
+        <div class="inside-cupcake">
+          <div class="inside-image">
+            <img src="img/Velvet-Cupcake.jpg" />
+            <div class="rating">
+              <span class="rating-text">4.8</span>
+              <span class="star-icon">&#9733;</span>
+            </div>
+          </div>
+          <ul>
+            <li>Red Velvet Elegance</li>
+            <li>$3.75 / Per Cupcake</li>
+            <li>$21.50 / Half Dozen</li>
+            <li>$41.50 / Dozen</li>
+          </ul>
+          <div class="order-box">
+            <div class="order-now-rectangle">
+              <a href="#" class="order-now">Order Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bestseller-cupcake">
+        <div class="inside-cupcake">
+          <div class="inside-image">
+            <img src="img/Oreo-Cupcake.webp" />
+            <div class="rating">
+              <span class="rating-text">4.8</span>
+              <span class="star-icon">&#9733;</span>
+            </div>
+          </div>
+          <ul>
+            <li>Cookies & Cream</li>
+            <li>$3.75 / Per Cupcake</li>
+            <li>$21.50 / Half Dozen</li>
+            <li>$41.50 / Dozen</li>
+          </ul>
+          <div class="order-box">
+            <div class="order-now-rectangle">
+              <a href="#" class="order-now">Order Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class="footer-box">
+        <div class="footer-list">
+          <h3>Opening Hours</h3>
+          <ul>
+            <li>Monday - Sunday</li>
+            <li>7am - 10pm</li>
+            <li>+65 8909 9154</li>
+            <li>Email: S10258376@connect.np.edu.sg</li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-box">
+        <div class="footer-list">
+          <h3>About</h3>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-box">
+        <div class="footer-list">
+          <h3>Help</h3>
+          <ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms and Conditions</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-box">
+        <div class="footer-list">
+          <h3>Our Socials</h3>
+          <a href="#" class="footer-icons"
+            ><img src="img/instagram-icon.svg" alt="Instagram"
+          /></a>
+          <a href="#" class="footer-icons"
+            ><img src="img/tiktok-icon.svg" alt="TikTok"
+          /></a>
+          <a href="#" class="footer-icons"
+            ><img src="img/facebook-icon.svg" alt="Facebook"
+          /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
