--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a href="special.html" class="text-header">Special Occasions</a>
           <a href="custom.html" class="text-header">Custom</a>
           <a href="aboutUs.html" class="text-header">About Us</a>
-          <a href="#" class="icon-header">
+          <a href="cart.html" class="icon-header">
             <img src="img/shopping-cart-icon.png" />
           </a>
           <a href="#" class="icon-header">
