footer href changes

--- a/cupcake.html
+++ b/cupcake.html
@@ -62,7 +62,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -84,7 +84,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -152,7 +152,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -174,7 +174,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -196,7 +196,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -218,7 +218,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -242,7 +242,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -264,7 +264,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -286,7 +286,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -308,7 +308,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -330,7 +330,7 @@
         <div class="footer-list">
           <h3>About</h3>
           <ul>
-            <li><a href="#">About Us</a></li>
+            <li><a href="aboutUs.html">About Us</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
