--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -150,7 +150,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -199,7 +199,7 @@
         <div class="footer-list">
           <h3>About</h3>
           <ul>
-            <li><a href="#">About Us</a></li>
+            <li><a href="aboutUs.html">About Us</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
