--- a/order.html
+++ b/order.html
@@ -190,7 +190,7 @@
         <div class="footer-list">
           <h3>About</h3>
           <ul>
-            <li><a href="#">About Us</a></li>
+            <li><a href="aboutUs.html">About Us</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
