--- a/special.html
+++ b/special.html
@@ -59,7 +59,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -81,7 +81,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html" class="order-now">Order Now</a>
             </div>
           </div>
         </div>
@@ -125,7 +125,7 @@
         <div class="footer-list">
           <h3>About</h3>
           <ul>
-            <li><a href="#">About Us</a></li>
+            <li><a href="aboutUs.html">About Us</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
