Update Cupcake Page

--- a/cupcake.html
+++ b/cupcake.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <script src="cupcake.js"></script>
     <title>All Cupcakes</title>
   </head>
   <body>
@@ -62,7 +63,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=caramel" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -84,7 +87,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=vanilla" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -106,7 +111,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=red-velvet" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -128,7 +135,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=cookies-cream" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -152,7 +161,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=s-mores" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -174,7 +185,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=chocolate-euphoria" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -196,7 +209,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=strawberry-bliss" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -218,7 +233,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=espresso-love" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -242,7 +259,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=salted-caramel" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -264,7 +283,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=blueberry-burst" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -286,7 +307,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=coconut-paradise" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -308,7 +331,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=lemon-zest" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
