Index Js Update

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <script src="index.js"></script>
     <title>Assignment 1</title>
   </head>
   <body>
@@ -43,28 +44,6 @@
       </div>
     </div>
 
-    <script>
-      var intervalTime = 3000;
-      var slideIndex = 0;
-
-      function showSlides() {
-        var slides = document.getElementsByClassName("mySlides");
-
-        for (var i = 0; i < slides.length; i++) {
-          slides[i].style.display = "none";
-        }
-
-        slideIndex++;
-        if (slideIndex > slides.length) {
-          slideIndex = 1;
-        }
-
-        slides[slideIndex - 1].style.display = "block";
-        setTimeout(showSlides, intervalTime);
-      }
-
-      showSlides();
-    </script>
     <h2>Bestsellers</h2>
     <div class="bestseller-box">
       <div class="bestseller-cupcake">
