Slight Changes in href

--- a/cupcake.html
+++ b/cupcake.html
@@ -128,7 +128,7 @@
             </div>
           </div>
           <ul>
-            <li>Cookies & Cream</li>
+            <li class="cupcake-name">Cookies & Cream</li>
             <li>$3.75 / Per Cupcake</li>
             <li>$21.50 / Half Dozen</li>
             <li>$41.50 / Dozen</li>
