--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=caramel" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -85,7 +87,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=vanilla" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -107,7 +111,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=red-velvet" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -129,7 +135,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=cookies-cream" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
