Order Page Change

--- a/order.html
+++ b/order.html
@@ -107,7 +107,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=caramel" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -129,7 +131,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html?cupcake-vanilla" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -151,7 +155,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=red-velvet" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -173,7 +179,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="#" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=cookies-cream" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
