--- a/special.html
+++ b/special.html
@@ -59,7 +59,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=wedding" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -81,7 +83,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=birthday" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
@@ -103,7 +107,9 @@
           </ul>
           <div class="order-box">
             <div class="order-now-rectangle">
-              <a href="order.html" class="order-now">Order Now</a>
+              <a href="order.html?cupcake=anniversary" class="order-now"
+                >Order Now</a
+              >
             </div>
           </div>
         </div>
