Update Cart Page

--- a/cart.html
+++ b/cart.html
@@ -28,5 +28,14 @@
         </div>
       </div>
     </div>
+    <div class="cart-container">
+      <h1>Your Shopping Cart</h1>
+      <div class="cart-items" id="cartItems"></div>
+      <div class="cart-total">
+        <h2>Total: $<span id="cartTotal">0.00</span></h2>
+        <a href="#" class="checkout-button" id="checkoutButton">Checkout</a>
+      </div>
+    </div>
+    <script src="cart.js"></script>
   </body>
 </html>
